[package]
name = "SequenceBuilder"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Graphical tool for building frame-wise animated sequences"
readme = "README.md"
homepage = "https://github.com/animsuite/SequenceBuilder"
repository = "https://github.com/animsuite/SequenceBuilder"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lsdf = { version = "0.1", path = "../lsdf" }
eframe = "0.20.1"
log = "0.4.14"
fern = "0.6.0"
poll-promise = "0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
